test/types/range/cast-assign-init/illegal-inits.5-1.good
illegal-inits.chpl:8: error: initializing a range with idxType uint(64) from a range with idxType color
